--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: ci
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v6 #Получаем код репозитория
     - uses: actions/setup-go@v6 #Настраиваем Go
       with:
-       go-version: '>=1.25.5'
+       go-version: '>=1.25'
        cache: false
     - run: go version 
 
